# thegarden

./: .gitignore  =3.0.0  GUI_README.md  README.md  README_original.md  demo_gui.py  fastapi_gui.py  gui.py  launcher.py  main.py  pyproject.toml  requirements.txt  test_gui.py  todoDB.md  web_gui.py
app/: __init__.py  calendar.py  calendar_router.py  huerta.py  models.py  weather.py  weather_router.py
config/: hortalizas.toml
database/: garden.kuzu.shadow  kuzu_manager.py  model_adapter.py  toml_loader.py
database/schemas/: garden_schema.sql
database/seeds/: initial_data.sql
gui/: garden-gui.js  index.html
scripts/: init_database.py  sample_queries.py
static/css/: style.css
static/js/: garden.js
templates/: index.html
tests/: test_database.py  test_huerta.py  test_kuzu_integration.py  test_new_features.py  test_structures.py  test_toml_loader.py
